# linuxcnc-g

./: .gitignore  CMakeLists.txt  VERSION
.github/workflows/: ci.yml
cmake/: buildcomponent.cmake  buildoptions.cmake
configs/common/: linuxcnc.nml  linuxcnc_big.nml
docs/src/config/: python-interface.txt  python-interface_es.txt
docs/src/gui/: gladevcp.txt  gladevcp_es.txt  qtvcp.txt
hallib/: check_config.tcl
include/: config.h
include/emc/: linuxcnc.h
include/emc/ini/: inispindle.hh
include/emc/kinematics/: genserkins.h  kinematics.h  lineardeltakins-common.h  rotarydeltakins-common.h
include/emc/motion/: dbuf.h  homing.h  mot_priv.h  motion.h  motion_debug.h
include/emc/nml_intf/: canon.hh  emc.hh  emc_nml.hh  emccfg.h  emcglb.h  interpl.hh
include/emc/rs274ngc/: interp_internal.hh  rs274ngc_interp.hh
include/emc/sai/: saicanon.hh
include/emc/task/: taskclass.hh
include/emc/tooldata/: tooldata.hh
include/emc/tp/: blendmath.h  spherical_arc.h  tc.h  tc_types.h  tp.h  tp_debug.h  tp_types.h
include/emc/usr_intf/: emcsched.hh  shcom.hh
include/hal/: hal.h  hal_parport.h  hal_priv.h
include/hal/classicladder/: classicladder.h
include/hal/drivers/: gm.h  hal_vti.h  motenc.h
include/hal/utils/: halcmd.h
include/libnml/cms/: cms.hh
include/libnml/nml/: nml.hh
include/libnml/posemath/: gomath.h
include/rtapi/: rtapi_vsnprintf.h  uspace_common.h
python/: gremlin_view.py  hal_glib.py  linuxcnc_util.py  nf.py  popupkeyboard.py  pyhal.py  pyngcgui.py  vcpparse.py
python/emc/ini/: update_ini.py
python/gladevcp/: combi_dro.py  drowidget.py  hal_actions.py  hal_filechooser.py  hal_gremlin.py  hal_mdihistory.py  hal_sourceview.py  macro_widget.py  offsetwidget.py  overridewidget.py
python/qtvcp/: core.py  qt_action.py  qt_istat.py  qtvcp_handler.py
python/qtvcp/widgets/: action_button.py  container_widgets.py  dro_widget.py  fake_status.py  origin_offsetview.py  probe_routines.py  screen_options.py  versa_probe_subprog.py
python/rs274/: glcanon.py
scripts/: .gitignore  CMakeLists.txt  activate-linuxcnc  activate-linuxcnc.sh  generate_ci_yml.sh  github-test-template.yml  halcmd_twopass  halrun  haltcl  linuxcnc.in  realtime  rtapi.conf  start-linuxcnc  start-linuxcnc.sh  test-linuxcnc  test-linuxcnc.sh
src/emc/canterp/: CMakeLists.txt  canterp.cc
src/emc/ini/: inihal.cc  inijoint.cc  inispindle.cc
src/emc/iotask/: CMakeLists.txt  ioControl.cc  ioControl_v2.cc
src/emc/kinematics/: CMakeLists.txt  corexykins.c  cubic.c  genserfuncs.c  kins_util.c  lineardeltakins.c  lineardeltakins.cc  maxkins.c  pentakins.c  rosekins.c  rotarydeltakins.c  rotarydeltakins.cc  rotatekins.c  scorbot-kins.c  tripodkins.c  trivkins.c  ugenserkins.c
src/emc/motion/: command.c  control.c  dbuf.c  emcmotglb.c  emcmotutil.c  homing.c  motion.c  simple_tp.c  stashf.c  usrmotintf.cc
src/emc/motion-logger/: motion-logger.c
src/emc/nml_intf/: CMakeLists.txt  emcargs.cc  emcglb.c
src/emc/pythonplugin/: CMakeLists.txt  python_plugin.cc
src/emc/rs274ngc/: CMakeLists.txt  canonmodule.cc  gcodemodule.cc  interp_array.cc  interp_check.cc  interp_convert.cc  interp_find.cc  interp_internal.cc  interp_namedparams.cc  interp_o_word.cc  interp_python.cc  interp_read.cc  interp_remap.cc  interp_write.cc  interpmodule.cc  pyemctypes.cc  pyparamclass.cc  rs274ngc_pre.cc
src/emc/sai/: CMakeLists.txt  driver.cc  dummyemcstat.cc  saicanon.cc
src/emc/task/: CMakeLists.txt  emccanon.cc  emcsvr.cc  emctask.cc  emctaskmain.cc  taskclass.cc  taskintf.cc  taskmodule.cc
src/emc/tooldata/: CMakeLists.txt  tool_watch.cc  tooldata_common.cc  tooldata_db.cc
src/emc/tp/: blendmath.c  spherical_arc.c  tc.c  tcq.c  tp.c
src/emc/usr_intf/: CMakeLists.txt  emclcd.cc  emcrsh.cc  emcsched.cc  emcsh.cc  halui.cc  schedrmt.cc  shcom.cc  sockets.c
src/emc/usr_intf/axis/: CMakeLists.txt
src/emc/usr_intf/axis/extensions/: _toglmodule.c  emcmodule.cc  togl.c
src/emc/usr_intf/gmoccapy/: release_notes.txt
src/emc/usr_intf/gremlin/: gremlin-run
src/hal/: CMakeLists.txt  hal_lib.c  halmodule.cc
src/hal/classicladder/: arithm_eval.c  classicladder_gtk.c  edit.c  edit_sequential.c  emc_mods.c  files.c  manager.c  manager_gtk.c  protocol_modbus_master.c  serial_linux.c  socket_server.c
src/hal/components/: CMakeLists.txt  at_pid.c  boss_plc.c  debounce.c  encoder.c  encoder_ratio.c  filter_kalman.comp  joyhandle.comp  max31855.comp  moveoff.comp  ohmic.comp  pid.c  plasmac.comp  pwmgen.c  sampler_usr.c  sim_encoder.c  stepgen.c  streamer_usr.c  threads.c  userkins.comp
src/hal/drivers/: CMakeLists.txt  hal_ax5214h.c  hal_bb_gpio.c  hal_evoreg.c  hal_gm.c  hal_motenc.c  hal_parport.c  hal_pi_gpio.c  hal_ppmc.c  hal_skeleton.c  hal_speaker.c  hal_stg.c  hal_tiro.c  hal_vti.c  opto_ac5.c  pci_8255.c
src/hal/utils/: halcmd.c  halcmd_commands.c  halcmd_completion.c  halcmd_main.c  halcompile.g  halrmt.c  halsh.c  meter.c  miscgtk.c  scope.c  scope_disp.c  scope_files.c  scope_horiz.c  scope_rt.c  scope_trig.c  scope_vert.c
src/libnml/: CMakeLists.txt
src/libnml/buffer/: locmem.cc  tcpmem.cc
src/libnml/cms/: cms.cc  cms_cfg.cc  cms_in.cc
src/libnml/inifile/: CMakeLists.txt  inifile.cc  inivar.cc
src/libnml/nml/: nml.cc
src/libnml/os_intf/: _sem.c  _shm.c
src/libnml/posemath/: _posemath.c  gomath.c  posemath.cc  sincos.c
src/rtapi/: CMakeLists.txt  uspace_rtapi_app.cc  uspace_rtapi_parport.cc
tcl/: CMakeLists.txt  linuxcnc.tcl  pkgIndex.tcl
tests/abort/feed-rate/: test-ui.py
tests/abort/g64/: test-ui.py
tests/halui/mdi/: test-ui.py
tests/hard-limits/: test-ui.py
tests/io-startup/: test-ui.py
tests/lathe/: test-ui.py
tests/linuxcncrsh-tcp/: tcp.nml
tests/mdi-queue-length/: test-ui.py
tests/mdi-while-queuebuster-waitflag/: remap.py  test-ui.py
tests/realtime-math/: rtmath.comp
tests/rs274ngc-startup/: test-ui.py
tests/rtapi_printf_0/: test.sh  test_rtapi_vsnprintf.c
tests/single-step/: test-ui.py
tests/startup-state/: test-ui.py
tests/statbuffer-g5x-abort/: test-ui.py
tests/tclsh-extensions/: test.sh
tests/tlo/: test-ui.py
(+114 files in other folders)
