add_executable(io ioControl.cc)
target_link_libraries(io PRIVATE nml)
target_link_libraries(io PRIVATE nmlintf)
target_link_libraries(io PRIVATE hal)
target_link_libraries(io PRIVATE tooldata)
target_link_libraries(io PRIVATE ulapi)
target_link_libraries(io PRIVATE inifile)
get_uspace_config(io)

add_executable(iov2 ioControl_v2.cc)
target_link_libraries(iov2 PRIVATE nml)
target_link_libraries(iov2 PRIVATE nmlintf)
target_link_libraries(iov2 PRIVATE hal)
target_link_libraries(iov2 PRIVATE tooldata)
target_link_libraries(iov2 PRIVATE ulapi)
target_link_libraries(iov2 PRIVATE inifile)
get_uspace_config(iov2)
