add_executable(rs274 saicanon.cc driver.cc dummyemcstat.cc ../task/taskmodule.cc ../task/taskclass.cc)
target_link_libraries(rs274 PRIVATE Python3::Python)
target_link_libraries(rs274 PRIVATE readline)
target_link_libraries(rs274 PRIVATE rs274ngc)
target_link_libraries(rs274 PRIVATE linuxcnc)
target_link_libraries(rs274 PRIVATE inifile)
target_link_libraries(rs274 PRIVATE pythonplugin)
target_link_libraries(rs274 PRIVATE tooldata)
target_link_libraries(rs274 PRIVATE hal)
target_link_libraries(rs274 PRIVATE nml)
target_link_libraries(rs274 PRIVATE nmlintf)
get_uspace_config(rs274)